--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -75,7 +75,7 @@
   .nav-menu{
     padding: 0;
     margin: auto auto;
-    margin-right: 10px;
+    margin-right: 20px;
   }
 
 }
